@@ -23,7 +23,7 @@ is $account->request_url =>
 is $account->id   => 12933,    'id';
 is $account->name => 'Yanick', 'name';
 isa_ok $account->created_at => 'Time::Piece';
-is $account->updated_at     => 'Thu Jan  3 09:53:18 2008', 'updated at';
+is $account->updated_at     => 'Thu Jan  3 14:53:18 2008', 'updated at';
 is $account->homepage_url   => '', "homepage url";
 is $account->avatar_url =>
   'http://www.gravatar.com/avatar.php?gravatar_id=a15c336550dd22cbdff9743a54b56b3b',
