@@ -1,5 +1,8 @@
 Revision history for WWW-Ohloh-API
 
+wip
+    * Changed the Time::Piece objects to be local to GMT
+
 1.0_0 - Tue Nov 18 2008
     * Changed all instances of get_* to fetch* in WWW::Ohloh::API
     * Adding repository and bugtracker info to META.yml
